# crates-index-script

./: .gitignore  Cargo.toml  README.md
src/: main.rs
