[package]
name = "index-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates-index = {version = "2.3.0" ,features = ["sparse"]}
reqwest = { version = "0.11.18", features = ["blocking", "gzip"] }
http = { version = "0.2" }
serde = { version = "1.0.160", features = ["rc","derive"] }
serde_json = "1.0.96"
chrono = "0.4.31"